--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,104 +1,25 @@
-<nav>
-  <div class="container-fluid">
-    <mat-toolbar>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <img src="/assets/img/logo-solo.svg" alt="" class="logo">
-      </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span class="example-spacer"></span>
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
-      </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-        <mat-icon>share</mat-icon>
-      </button>
-    </mat-toolbar>
-  </div>
-</nav>
 <header class="cabecera-inicio">
   <div class="container-fluid">
-    <div class="row center-xs middle-xs">
-      <div class="kanban-text"></div>
-      <div>Diseño</div>
-      <div>Desarrollo</div>
-      <div>Web</div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquam aliquid, at autem consectetur
-        cumque deleniti enim excepturi hic in ipsum laboriosam magnam maiores nisi praesentium quas, repellendus sit
-        totam, velit. Culpa eveniet fugiat, itaque laboriosam laudantium magni perferendis? Adipisci corporis non
-        nostrum placeat voluptates. Dolorum, ex, possimus. A aspernatur consequatur delectus deleniti dignissimos
-        dolores eveniet, ex facere fugit harum hic ipsa laborum libero minima non nostrum officia possimus quas qui quia
-        quod quos repellendus similique sint unde ut vel veritatis vero vitae voluptatem? Ducimus eligendi mollitia nisi
-        quae. Accusantium itaque laborum modi nemo obcaecati praesentium quam sint temporibus!</p>
+    <div class="row middle-xs center-xs">
+      <div class="col-xs-12 col-md-12">
+        <img src="/assets/img/logo/logo-bg-white.svg" alt="Logo Kanban Solo Texto" class="logo">
+        <div class="ddw">Actualmente en desarrollo</div>
+        <div class="ddw">Perdón inconvenientes :(</div>
+        <a href="mailto:contacto@kanbanweb.cl" class="ddw">contacto@kanbanweb.cl</a>
+        <!--
+        <img src="/assets/img/logo/logo-text-bg-black.svg" alt="Logo Kanban Solo Texto" class="logo">
+            <div class="ddw">Diseño</div>
+        <div class="ddw">Desarrollo</div>
+        <div class="ddw">Web</div>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <img src="/assets/img/ilustraciones/ilus-1.svg" alt="" class="ilus-1">
+        <img src="/assets/img/ilustraciones/ilus-2.svg" alt="" class="ilus-2">
+      </div>
+      -->
+      </div>
     </div>
   </div>
-
+  <router-outlet></router-outlet>
 </header>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab at, corporis cum dignissimos distinctio doloribus enim
-  eos fugiat id illum ipsum iusto laudantium libero modi nisi nobis numquam, officiis optio quibusdam quidem repellat
-  repudiandae ullam voluptatum! Ab aliquid asperiores consequuntur debitis, deleniti dolor dolorum ducimus eveniet
-  explicabo facere ipsa itaque, libero mollitia non nostrum numquam perferendis placeat quam rem saepe sapiente sint
-  tempora temporibus tenetur totam ullam veritatis voluptatem! Aut debitis, eius incidunt inventore minima nostrum
-  officiis quos voluptates! Ad aliquid dolor laborum magnam molestias. Autem blanditiis corporis dolorem ducimus eum
-  facilis necessitatibus neque officia similique? Accusamus atque consequuntur cum doloribus error facere iste magnam
-  mollitia obcaecati optio porro quos, ratione sed sequi veniam veritatis voluptates. A numquam quidem reprehenderit
-  velit. Accusantium alias amet aperiam assumenda at atque beatae consectetur culpa cupiditate delectus dicta dolor
-  dolorem doloremque eos esse et exercitationem expedita fugiat ipsum, iste laboriosam libero necessitatibus nihil non
-  pariatur praesentium quaerat quia quibusdam quos sed temporibus ullam velit vero? Aperiam assumenda, at atque autem
-  fugiat nobis quae quisquam recusandae suscipit unde. Aliquid aspernatur cumque earum eveniet exercitationem itaque
-  quae saepe similique sit suscipit, vel velit? Cupiditate ipsum, laborum rem repellat saepe ullam vero? Architecto at
-  dolorem magnam odit omnis perferendis quos sapiente! Ad cumque distinctio ea facilis fugit harum molestiae nam
-  perspiciatis, rem repudiandae tempore ullam. A accusamus architecto assumenda consequatur cumque deleniti dicta dolor,
-  fugiat illum incidunt ipsam iure laboriosam, laborum modi nihil nisi nostrum officia porro possimus quaerat quam
-  quibusdam reiciendis reprehenderit veritatis voluptatibus. Ab ad adipisci amet, architecto asperiores aspernatur
-  assumenda consequuntur eaque enim eos est eveniet facere fuga in magni natus necessitatibus neque non optio quo
-  repellat repellendus rerum tempora veniam veritatis! Eaque facere ipsam iusto laborum qui quo suscipit tempora. Alias
-  aliquid animi assumenda doloribus ex expedita facere fugit iste mollitia, nam nisi odio quas quidem saepe sed, totam
-  veniam. Aliquid autem, blanditiis cumque esse eum facere illum, impedit magni molestias placeat reprehenderit vel.
-  Adipisci corporis doloremque doloribus, ipsa libero possimus quidem repudiandae suscipit temporibus totam? Ab, autem
-  beatae dolorum exercitationem illum necessitatibus officia perferendis perspiciatis quas, rem repellendus sint soluta
-  tempora vero voluptatum! Ab assumenda autem commodi consectetur cupiditate dignissimos, distinctio dolore doloribus ea
-  eligendi est eum eveniet expedita facilis id in laboriosam magnam molestias nisi numquam pariatur perferendis
-  praesentium, provident quae quas qui quibusdam quis quod, quos rem reprehenderit rerum sit suscipit tempora totam vero
-  voluptatibus. Accusamus adipisci consectetur cum delectus, dolore enim error excepturi ipsa iste magnam modi nulla
-  pariatur provident quam quo quos recusandae repellat reprehenderit suscipit vel. Aliquid consectetur cumque cupiditate
-  debitis deserunt dicta distinctio dolores error facilis, ipsa ipsum, omnis quis repellendus soluta totam veritatis,
-  vero? Dolore eius, harum laborum officiis quas rem voluptates? Doloribus laudantium perspiciatis quo? Ad delectus
-  dignissimos exercitationem explicabo iure laborum maiores maxime nihil, possimus quas quibusdam quis rerum voluptatum.
-  Culpa cum dicta dolores error et, harum ipsam libero nisi nobis officiis, quidem repellat repudiandae, rerum
-  voluptates voluptatum. Accusamus accusantium animi blanditiis consequatur consequuntur corporis cum debitis delectus
-  eaque eius eveniet ex expedita facere fugit harum illo ipsum itaque laudantium nihil nisi nostrum nulla numquam omnis
-  optio quam qui quidem similique sint, sit ut? Necessitatibus possimus provident quaerat quo totam? Ab, amet animi
-  debitis eum ex itaque laborum libero qui quia voluptate. Ad alias aliquam amet, aperiam beatae debitis delectus dicta
-  distinctio dolorum eligendi eos est facilis illo impedit ipsa labore laboriosam libero magni maiores molestias nam
-  necessitatibus nemo numquam obcaecati officiis quae quaerat quis recusandae reiciendis sapiente sint totam ut
-  voluptatem! Adipisci consequatur cupiditate iste nesciunt quaerat quasi, temporibus ullam voluptate! Delectus
-  doloribus ea magni minus molestiae necessitatibus neque non officia possimus, reiciendis similique temporibus ut
-  voluptate! Laborum, non reprehenderit? Ab accusantium cum cumque enim error eum fugiat fugit ipsa labore laborum
-  minima mollitia nam nesciunt, obcaecati optio pariatur repudiandae tempore unde veritatis vitae. Architecto cupiditate
-  deleniti dicta, dolorem doloribus et eveniet, expedita facere illum itaque maxime molestiae molestias neque porro,
-  similique sint sit ullam vitae voluptate voluptates? Ab ad aspernatur assumenda blanditiis dicta dolorem ea enim
-  explicabo fugiat harum, laborum magnam neque pariatur quas quia quibusdam ratione vero voluptates. Aliquid
-  consequuntur fuga magni perferendis porro quibusdam reprehenderit. Ab assumenda deserunt doloremque ducimus esse
-  facilis impedit in ipsa ipsam iure modi molestiae necessitatibus perspiciatis qui recusandae sequi tempore,
-  temporibus, totam vero voluptates! Accusamus adipisci at esse facilis fuga hic illum ipsa itaque magnam mollitia
-  pariatur, quaerat quidem quis quisquam sapiente, soluta vel. Ad beatae consequuntur dicta dolorem ea eaque, error fuga
-  impedit ipsum magni mollitia nam odio possimus ratione reprehenderit totam voluptatibus. Accusantium adipisci at
-  doloremque et illum maiores maxime nihil obcaecati veniam? Assumenda cum deserunt distinctio doloribus ducimus facere
-  inventore laudantium magni sit tenetur, ullam vel? Adipisci consequuntur dolorum ea eius eum excepturi facilis fugiat
-  illo, iste porro, ratione ullam unde voluptatum. Accusantium autem, culpa dolor eaque eligendi eum expedita, illo
-  ipsam ipsum libero modi nulla quaerat quidem quis rem repellendus similique tenetur, vero. Architecto consequatur
-  debitis dolor molestiae nemo non rerum suscipit tempore, voluptatum. Expedita, in necessitatibus. Ad alias, animi
-  autem commodi cum dolor dolorum ea eaque eos fugiat fugit id laborum molestias nostrum officiis omnis optio
-  praesentium quibusdam quidem rem rerum sapiente sint soluta totam veritatis vitae voluptates. Architecto delectus
-  dolorem explicabo iste nihil! Dignissimos dolorem eos eveniet fugiat id impedit molestiae nulla possimus quod rem,
-  repellat similique veniam. A ad autem ea eius fugiat, impedit laborum, modi quo tempora ullam vel velit veniam
-  voluptates! Asperiores ducimus earum explicabo incidunt itaque quos repellat ullam voluptatibus. Accusamus aliquam
-  aliquid assumenda autem dicta distinctio dolor ea hic id impedit incidunt ipsam itaque labore laborum maiores maxime
-  nihil nisi nulla, numquam optio quaerat quia quos repellat sequi sit, soluta totam ullam vero vitae voluptates? Alias
-  aperiam assumenda atque consequatur debitis dignissimos illum laudantium minus nobis nostrum numquam, recusandae rem
-  tempore tenetur veritatis! Accusantium eaque earum esse ex excepturi, itaque maxime perspiciatis totam! Aperiam at
-  cumque dolorem ea eius eum harum impedit laboriosam laudantium necessitatibus nobis, quam quasi quo reiciendis sunt
-  veritatis vero voluptas. Alias aut fugit iste labore quaerat repellendus veritatis voluptate.</p>
-<router-outlet></router-outlet>
+
