--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'node_modules/flexboxgrid-sass/flexboxgrid'
+@import 'colores-personalizados'
+
+
+.container-fluid
+  max-width: 1200px
+
+
