--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <img src="/assets/img/logo/logo-bg-white.svg" alt="Logo Kanban Solo Texto" class="logo">
         <div class="ddw">Actualmente en desarrollo</div>
         <div class="ddw">Perdón inconvenientes :(</div>
-        <a href="mailto:contacto@kanbanweb.cl" class="ddw">contacto@kanbanweb.cl</a>
+        <a href="mailto:hola@kanbanweb.cl" class="ddw">hola@kanbanweb.cl</a>
         <!--
         <img src="/assets/img/logo/logo-text-bg-black.svg" alt="Logo Kanban Solo Texto" class="logo">
             <div class="ddw">Diseño</div>
