--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,6 +2,9 @@
 @import 'node_modules/flexboxgrid-sass/flexboxgrid'
 @import 'colores-personalizados'
 
+body
+  padding: 0
+  margin: 0
 
 .container-fluid
   max-width: 1200px
