--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--
 <header class="cabecera-inicio">
   <div class="container-fluid">
     <div class="row middle-xs center-xs">
@@ -6,20 +7,19 @@
         <div class="ddw">Actualmente en desarrollo</div>
         <div class="ddw">Perdón inconvenientes :(</div>
         <a href="mailto:hola@kanbanweb.cl" class="ddw">hola@kanbanweb.cl</a>
-        <!--
         <img src="/assets/img/logo/logo-text-bg-black.svg" alt="Logo Kanban Solo Texto" class="logo">
-            <div class="ddw">Diseño</div>
-        <div class="ddw">Desarrollo</div>
-        <div class="ddw">Web</div>
-      </div>
-      <div class="col-xs-12 col-md-6">
-        <img src="/assets/img/ilustraciones/ilus-1.svg" alt="" class="ilus-1">
-        <img src="/assets/img/ilustraciones/ilus-2.svg" alt="" class="ilus-2">
-      </div>
-      -->
+        <div class="ddw">Diseño</div>
+          <div class="ddw">Desarrollo</div>
+          <div class="ddw">Web</div>
+        </div>
+        <div class="col-xs-12 col-md-6">
+          <img src="/assets/img/ilustraciones/ilus-1.svg" alt="" class="ilus-1">
+          <img src="/assets/img/ilustraciones/ilus-2.svg" alt="" class="ilus-2">
+        </div>
       </div>
     </div>
   </div>
-  <router-outlet></router-outlet>
 </header>
-
+-->
+<app-menu></app-menu>
+<router-outlet></router-outlet>
