--- a/src/colores-personalizados.sass
+++ b/src/colores-personalizados.sass
@@ -1,2 +1,15 @@
 
-$color-blue: #010138
+// Primary colors
+$primary: #010138
+$primary-l: #010138
+$primary-d: #010138
+$primary-t: #fefefe
+
+// Secondary colors
+$secondary: #6615b2
+$secondary-l: #9a4ae5
+$secondary-d: #2f0081
+$secondary-t: #fefefe
+
+$green: #27EF21
+
