--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,12 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'node_modules/flexboxgrid-sass/flexboxgrid'
-@import 'colores-personalizados'
+
+
+p, h1, h2, h3, h4, h5, h6
+  padding: 0
+  margin: 0
 
 body
   padding: 0
   margin: 0
 
-.container-fluid
+.container
   max-width: 1200px
+  margin: 0 auto
+  height: 100%
+  padding-left: 20px
+  padding-right: 20px
+
+  .row
+    height: 100%
+
+.img-responsive
+  max-width: 100%
+  height: auto
+
+.zero-height
+  height: 0
+
+
 
 
