--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,11 @@
     </div>
   </div>
 </header>
--->
 <app-menu></app-menu>
+-->
+
+<sidenav-responsive>
+
+</sidenav-responsive>
+
 <router-outlet></router-outlet>
