--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -12,7 +12,7 @@
 </section>
 <div class="container zero-height">
   <div class="row end-xs">
-    <div class="col-xs-6">
+    <div class="col-xs-6 col-md-4">
       <div class="box">
         <img id="ilus-2"
              src="./assets/img/ilustraciones/ilus-2.svg"
@@ -25,12 +25,30 @@
   </div>
 </div>
 
+<div class="zero-height">
+  <img src="./assets/img/deco/1.svg" alt="" id="deco-1">
+</div>
 
-
+<section id="portafolio">
+  <div class="container">
+    <h2 class="extra">Portafolio</h2>
+  </div>
+</section>
+<div id="top-blog">
+</div>
+<section id="blog">
+  <div class="container">
+    <h2 class="extra">Blog</h2>
+  </div>
+</section>
 <section id="test">
   <div class="container">
-    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, corporis?</h1>
-    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, corporis?</h2>
+    <h1>h1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, corporis?</h1>
+    <h1 class="titulo">h1 titulo Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, corporis?</h1>
+    <h2>h2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, corporis?</h2>
+    <h2 class="subtitulo">h2 subtitulo Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus,
+      corporis?</h2>
+    <h2 class="extra">h2 subtitulo Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, corporis?</h2>
     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, corporis?</h3>
     <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, corporis?</h4>
     <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, corporis?</h5>
