--- a/src/colores-personalizados.sass
+++ b/src/colores-personalizados.sass
@@ -1,15 +1,21 @@
-
-// Primary colors
 $primary: #010138
 $primary-l: #010138
 $primary-d: #010138
 $primary-t: #fefefe
+$primary-black: #212121
+$primary-white: #eeeeee
 
-// Secondary colors
 $secondary: #6615b2
 $secondary-l: #9a4ae5
 $secondary-d: #2f0081
 $secondary-t: #fefefe
 
 $green: #27EF21
+$green-l: #76ff5e
+$green-d: #00bb00
+$green-t: #212121
 
+$complement: #f7e079
+$complement-l: #ffffaa
+$complement-d: #c2ae4a
+$complement-t: #212121
