--- a/src/app/landing/landing.component.sass
+++ b/src/app/landing/landing.component.sass
@@ -5,6 +5,11 @@
   width: 100%
   background-color: $primary
   color: $primary-t
+// background-image: linear-gradient(top, #2e3646 0%, #20242e 50%, $primary 100%)
+// background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #2e3646), color-stop(0.5, #20242e), color-stop(1, $primary))
+// background-image: -moz-linear-gradient(top, #2e3646 0%, #20242e 50%, $primary 100%)
+// background-image: -o-linear-gradient(top, #2e3646 0%, #20242e 50%, $primary 100%)
+// background-image: -ms-linear-gradient(top, #2e3646 0%, #20242e 50%, $primary 100%)
 
 
 #ilus-1
@@ -15,11 +20,34 @@
 
 #ilus-2
   position: relative
+  right: 0
   top: -100vh
   max-width: 100%
   width: 18em
   display: none
   visibility: hidden
+
+#deco-1
+  position: relative
+  right: 0
+  top: -1px
+  z-index: 5
+
+#portafolio
+  min-height: 150vh
+  background-image: -moz-linear-gradient($primary, $primary-black)
+  z-index: -5
+
+#portafolio > .container
+  position: relative
+  color: $primary-t
+  z-index: 10
+
+#top-blog
+  height: 50vh
+  background-image: -moz-linear-gradient($primary-black, $secondary)
+#blog
+  background-color: $primary-white
 
 
 @media (min-width: 993px)
