--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,7 +5,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap')
 @import 'src/colores-personalizados'
 
-
 $font-h: 'Quicksand', sans-serif
 $font-p: 'Lato', sans-serif
 
@@ -72,6 +71,7 @@ h2.extra
 
 
 .container
+  width: 100%
   max-width: 1200px
   margin: 0 auto
   height: 100%
@@ -80,6 +80,17 @@ h2.extra
 
   .row
     height: 100%
+
+
+
+.container-flex
+  display: flex
+
+.flex-middle
+  align-content: center
+  justify-content: center
+  vertical-align: middle
+
 
 .img-responsive
   max-width: 100%
