--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,2 @@
-<!--
-<header class="cabecera-inicio">
-  <div class="container-fluid">
-    <div class="row middle-xs center-xs">
-      <div class="col-xs-12 col-md-12">
-        <img src="/assets/img/logo/logo-bg-white.svg" alt="Logo Kanban Solo Texto" class="logo">
-        <div class="ddw">Actualmente en desarrollo</div>
-        <div class="ddw">Perdón inconvenientes :(</div>
-        <a href="mailto:hola@kanbanweb.cl" class="ddw">hola@kanbanweb.cl</a>
-        <img src="/assets/img/logo/logo-text-bg-black.svg" alt="Logo Kanban Solo Texto" class="logo">
-        <div class="ddw">Diseño</div>
-          <div class="ddw">Desarrollo</div>
-          <div class="ddw">Web</div>
-        </div>
-        <div class="col-xs-12 col-md-6">
-          <img src="/assets/img/ilustraciones/ilus-1.svg" alt="" class="ilus-1">
-          <img src="/assets/img/ilustraciones/ilus-2.svg" alt="" class="ilus-2">
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
-<app-menu></app-menu>
--->
-
-<sidenav-responsive>
-
-</sidenav-responsive>
-
-<router-outlet></router-outlet>
+<p>App Component its works!</p>
+<sidenav-responsive></sidenav-responsive>
