--- a/src/app/sidenav-responsive/sidenav-responsive.component.html
+++ b/src/app/sidenav-responsive/sidenav-responsive.component.html
@@ -1,30 +1,30 @@
-<div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
-  <mat-toolbar color="primary" class="example-toolbar">
-    <button mat-icon-button (click)="snav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <h1 class="example-app-name">responsive app</h1>
+<nav class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+  <mat-toolbar class="example-toolbar">
+    <div class="container container-flex">
+      <a routerLink="/" class="c-logo">
+        <img src="./assets/img/logo/logo-solo.svg" alt="Logo Kanban" class="logo-simple">
+      </a>
+      <span class="espaceador"></span>
+      <button mat-icon-button (click)="snav.toggle()" class="button-menu">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </div>
   </mat-toolbar>
 
   <mat-sidenav-container class="example-sidenav-container"
-                         [style.margintop.px]="mobilequery.matches ? 56 : 0">
-    <mat-sidenav #snav [mode]="mobilequery.matches ? 'over' : 'side'"
-                 [fixedinviewport]="mobilequery.matches" fixedtopgap="56">
+                         [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <mat-nav-list>
-        <a mat-list-item routerlink="." *ngfor="let nav of fillernav">{{nav}}</a>
+        <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
       </mat-nav-list>
     </mat-sidenav>
 
     <mat-sidenav-content>
-      <p *ngfor="let content of fillercontent">{{content}}</p>
+
+      <router-outlet></router-outlet>
+
+      <p *ngFor="let content of fillerContent">{{content}}</p>
     </mat-sidenav-content>
-
   </mat-sidenav-container>
-</div>
-
-<div *ngIf="!shouldRun">Please open on Stackblitz to see result</div>
-
-
-<!-- Copyright 2020 Google LLC. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
+</nav>
