--- a/src/app/sidenav-responsive/sidenav-responsive.component.sass
+++ b/src/app/sidenav-responsive/sidenav-responsive.component.sass
@@ -1,3 +1,20 @@
+@import 'src/colores-personalizados'
+
+mat-toolbar
+  background-color: $primary
+  color: $primary-t
+
+  .button-menu, .logo-simple, .c-logo
+    margin: auto
+
+.espaceador
+  flex: 1 1 auto
+
+.logo-simple
+  height: 50px
+  max-height: 80%
+  vertical-align: middle
+
 .example-container
   display: flex
   flex-direction: column
@@ -18,10 +35,14 @@ h1.example-app-name
 .example-sidenav-container
   /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
      causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
-  flex: 1
+  width: 100%
 
 .example-is-mobile .example-sidenav-container
   /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
      `<body>` to be our scrolling element for mobile layouts. */
-  flex: 1 0 auto
+
+
+
+.mat-toolbar-row
+  padding: 0
 
